--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -209,7 +209,10 @@
 
 <div id="mainPopup">
 	<nav class="navbar fixed-top" style="background-color: #f2c700;">
-		<a class="navbar-brand">Einherjar</a>
+		<a class="navbar-brand">
+			<img src="../../icons/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+			Einherjar
+		</a>
 	</nav>
 	<div class="d-flex flex-column" style="margin-top: 85px; height: 300px;">
 		<div id="rest" class="p-2" style="display: block">
