--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -225,11 +225,19 @@
 			</div>
 		</div>
 		<div id="result" class="p-2" style="display: none">
+			<center>
+				<div class="card text-white bg-dark mb-3">
+					<center><div class="card-header">Fake Probability</div></center>
+					<div class="card-body">
+						<center><h2 id="probabilityBox" class="card-title">0%</h2><center></center>
+					</div>
+				</div>
+			</center>
 			<ul class="list-group">
-				<li class="list-group-item">Stance Detection</li>
-				<li class="list-group-item">Fact Check</li>
-				<li class="list-group-item">Sentiment Analysis</li>
-				<li class="list-group-item">Reputation Score</li>
+				<li id="stanceBox" class="list-group-item" style="color:white;">Stance Detection</li>
+				<li id="factBox" class="list-group-item" style="color:white;">Fact Check</li>
+				<li id="sentimentBox" class="list-group-item" style="color:white;">Sentiment Analysis</li>
+				<li id="reputationBox" class="list-group-item" style="color:white;">Reputation Score</li>
 			</ul>
 		</div>
 	</div>
