hack to make demo work

--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -215,8 +215,12 @@
 		</a>
 	</nav>
 	<div class="d-flex flex-column" style="margin-top: 85px; height: 300px;">
-		<div id="rest" class="p-2" style="display: block">
+		<div id="rest" class="p-2 flex-column" style="display: block">
+			<center><div>
 			<button type="button" class="btn btn-success tryButton">Try</button>
+			<button type="button" class="btn btn-success tryButton">Try</button>
+			<button type="button" class="btn btn-success tryButton">Try</button>
+			</div></center>
 		</div>
 		<div id="loading" class="p-2" style="display: none">
 			<div style="color: #f2c700" class="la-square-jelly-box la-3x">
